# tauri2-app-ftp-server

./: README.md  package.json
.claude/: settings.local.json
.github/workflows/: dev.yml  release.yml
doc/: csp-configuration.md  csp-implementation-summary.md  input-validation-improvements.md  input-validation-summary.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  ftp_user_authenticator.rs  ftpuser.rs  ftpworker.rs  invoke_command.rs  lib.rs  main.rs  tray.rs  validators.rs
src-tauri/src/commands/: ftp.rs  init.rs  ip_blacklist.rs  mod.rs  network.rs  system.rs
src-tauri/src/ftp/: ftp_user_authenticator.rs  ftpevent.rs  ftpuser.rs  ftpworker.rs  ip_blacklist.rs  mod.rs  vfs_logger.rs
src/components/: AppBackground.vue  AppLogo.vue  LanguageSwitcher.vue  SplashScreen.vue
src/components/icons/: SvgIcon.vue  icons.ts  index.ts
src/components/splash/: types.ts
src/components/splash/components/: ErrorMessage.vue  InitSteps.vue  ProgressBar.vue  SplashLogo.vue
src/components/splash/composables/: useInitialization.ts  useParticleAnimation.ts
src/composables/: useFirstLoadAnimation.ts  useFtpConnection.ts  useFtpLogs.ts  useFtpServer.ts  useRunTimer.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  ja.ts  th.ts  zh.ts
src/router/: index.ts
src/store/: index.ts
src/styles/: global.scss
src/utils/: validation.examples.ts  validation.ts
src/view/: About.vue  Ftp.vue  FtpAuth.vue  FtpTabs.vue  Ftp_tray_helper.ts
