[package]
name = "ftp-server"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri2_app_ftp_server_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shellx = "2.0.12"
tauri-plugin-os = "2.2.0"
libunftp = "0.20.3"
unftp-sbe-fs = "0.2.6"
unftp-sbe-restrict = "0.1.2"
async-trait = "0.1.86"
tokio = { version = "1", features = ["full"] }
tauri-plugin-store = "2.2.0"
tauri-plugin-log = "2.2.1"
subtle = "2.4"
