[package]
name = "ftp-server"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri2_app_ftp_server_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shellx = "2.0.16"
tauri-plugin-os = "2.3.2"
libunftp = "0.23.0"
unftp-core = "0.1.0"
unftp-sbe-fs = "0.4.0"
unftp-sbe-restrict = "0.1.5"
async-trait = "0.1.86"
tokio = { version = "1", features = ["full"] }
tauri-plugin-store = "2.4.2"
tauri-plugin-log = "2.8.0"
subtle = "2.4"
tauri-plugin-clipboard = "2.1.11"
get_if_addrs = "0.5"
rand = "0.8"
